welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:9: error: Int does not take parameters
  for (i<-0 to T.length()-2) {
                       ^Array1:13: error: Int does not take parameters
  T(T.length()-1) = getCouleurSol()
            ^Array1:14: error: Int does not take parameters
  recule(T.length())
                 ^